# agentx-foo

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: build_nuitka.sh
src/agentx/: __init__.py  app.py  cli.py  downloader.py  main.py
src/agentx_core/: __init__.py  main.py
